--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,26 @@
-body {
-  margin: 0;
-  padding: 0;
-  background-color: #74ebd5;
+body{
   background-image: linear-gradient(90deg, #74ebd5 0%, #9face6 100%);
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
+}
+.Form{
+  height: auto;
+  width: 500px;
+  text-align: center;
+  margin-top:90px;
+  margin:200px ;
+  color: brown;
+  background-color: lightpink;
+  border-radius: 10px;
+  border: 2px solid black;
+}
+.list {
+  text-align: center;
 }
 
-.container {
-  background-color: rgba(255, 255, 255, 0.8);
-  border-radius: 10px;
-  padding: 20px;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
-    rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
-  max-width: 400px;
-  width: 100%;
+.list ul {
+  list-style-type: disc;
+  padding-left:30px ;
+}
+
+.list li {
+  text-align: left;
 }
